--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
 	
 	
 	</p>
-	<button class="btn bg-info btn-lg text-white">Get Start</button>
+	<a class="btn bg-info btn-lg text-white"  th:href="@{/user/index}" > Get Start </a>
 	
 	
 	</div>
