--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -41,7 +41,7 @@
   <a class="active" th:href="@{/user/index}"><i class="ri-home-4-line"></i>Home</a>
   <a th:href="@{/user/show-contacts/0}"><i class="ri-contacts-book-2-line"></i>View Contacts</a>
   <a th:href="@{/user/add-contact}"><i class="ri-file-add-line"></i>Add Contact</a>
-  <a href="#about"><i class="ri-profile-line"></i>Your Profile</a>
+  <a th:href="@{/user/profile}"><i class="ri-profile-line"></i>Your Profile</a>
   <a href="#about"><i class="ri-settings-2-line"></i>Settings</a>
   <a th:href="@{/logout}"><i class="ri-logout-box-r-line"></i>Logout</a>
 </div>
