--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -31,8 +31,8 @@
       <td th:text=${c.phone}></td>
        <td ></td>
        <td>
-       <button class="btn btn-danger btn-sm" >Delete<i class="ri-delete-bin-6-line"></i></button>
-       <button class="btn btn-primary btn-sm">Update<i class="ri-pencil-line"></i></button>
+       <a th:href="@{'/user/delete/'+${c.cid}}" class="btn btn-danger btn-sm" >Delete<i class="ri-delete-bin-6-line"></i></a>
+       <a th:href="@{'/user/update/'+${c.cid}}" class="btn btn-primary btn-sm">Update<i class="ri-pencil-line"></i></a>
    </td>
 
 </tr>
