--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="#">About</a>
         </li>
        <li class="nav-item">
-          <a class="nav-link " th:href="@{/signin}" >Login</a>
+          <a class="nav-link " th:href="@{/user/index}" >Login</a>
         </li>
 
           <li class="nav-item">
