--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -6,7 +6,23 @@
 </head>
 <body>
 	<section class="content">
-	<h1>this is about page</h1>
+	<div class="container">
+	<div class="card">
+	<div class="card-body">
+	<div class="container text-center">
+	<img class="detail-image text-center" th:src="@{'/img/pixel.avif'}" alt="profile photo"/>
+	<h1 class="text-center mt-3 text-secondary font-italic font-weight-light">
+	Start Adding your contact on cloud .....
+	
+	</h1>
+	<a th:href="@{/user/add-contact}" class="btn btn-primary mt-4 btn-block text-uppercase">Add New Contact</a>
+	
+	</div>
+	
+	</div>
+	
+	</div>
+	</div>
 
 	</section>
 </body>
